--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mrsimplelife/hi-graphql#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "graphql-yoga": "^1.18.3"
   },
   "devDependencies": {
